# rucio

./: .dockerignore  CNAME  Cargo.toml  Containerfile  README.md  index.html  test-e2e.sh  versions.env
.cargo/: config.toml
.githooks/: pre-commit
.github/: FUNDING.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  container.yml  pages.yml  release.yml
docs/: README.md
docs/admin/: 01-bootstrap-node.md  02-indexer.md  README.md
docs/design/: 01-architecture.md  02-networking.md  03-transfer-protocol.md  04-storage.md  05-node-classes.md  06-hashing.md  07-emule-kad.md  08-emule-kad-limitations.md  README.md
docs/dev/: 01-toolchain.md  02-building.md  03-web-ui.md  README.md
docs/user/: 01-installation.md  02-quick-start.md  03-sharing-files.md  04-downloading.md  05-searching.md  06-configuration.md  07-magnet-links.md  08-notifications.md  09-categories.md  10-pinning.md  README.md
rucio/: Cargo.toml
rucio-bootstrap/: Cargo.toml
rucio-bootstrap/src/: config.rs  main.rs
rucio-bootstrap/src/indexer/: api.rs  db.rs  mod.rs  web.rs
rucio-cli/: Cargo.toml
rucio-cli/locales/: en.yml  es.yml
rucio-cli/src/: client.rs  color.rs  help.rs  lib.rs  main.rs  state.rs  table_util.rs
rucio-cli/src/cmd/: categories.rs  config.rs  downloads.rs  emule.rs  mod.rs  pins.rs  search.rs  shares.rs  status.rs  subscriptions.rs  uploads.rs
rucio-core/: Cargo.toml
rucio-core/src/: lib.rs  logging.rs
rucio-core/src/api/: categories.rs  config.rs  downloads.rs  emule.rs  metrics.rs  mod.rs  notifications.rs  pins.rs  search.rs  searches.rs  shares.rs  status.rs  subscriptions.rs  uploads.rs  ws.rs
rucio-core/src/protocol/: bao.rs  chunk.rs  file.rs  hashing.rs  have.rs  magnet.rs  manifest.rs  mod.rs  node.rs  outboard.rs  pinset.rs  search.rs  transfer.rs
rucio-daemon/: Cargo.toml  build.rs
rucio-daemon/src/: config.rs  ed2k_index.rs  emule.rs  emule_identity.rs  fsutil.rs  lib.rs  live_stats.rs  main.rs  metrics.rs  notifier.rs  pinset.rs  throttle.rs  transfer.rs  upload_scheduler.rs  upload_stats.rs  upnp.rs  watcher.rs  webhooks.rs
rucio-daemon/src/api/: categories.rs  config.rs  downloads.rs  emule.rs  health.rs  metrics.rs  mod.rs  notifications.rs  pins.rs  search.rs  searches.rs  shares.rs  static_files.rs  status.rs  subscriptions.rs  tests.rs  uploads.rs  ws.rs
rucio-daemon/src/db/: categories.rs  downloads.rs  emule_downloads.rs  emule_identity.rs  emule_shared_files.rs  metrics.rs  mirror_optouts.rs  mirror_owned.rs  mirror_pins.rs  mod.rs  notifications.rs  peers.rs  pin_subscriptions.rs  pins.rs  schema.sql  shared_dirs.rs  shares.rs
rucio-daemon/src/node/: behaviour.rs  classify.rs  codec_utils.rs  identity.rs  manifest_codec.rs  messages.rs  mod.rs  task.rs  transfer_codec.rs
rucio-emule/: Cargo.toml
rucio-emule/src/: ed2k.rs  lib.rs  progress.rs  transfer.rs
rucio-emule/src/kad/: gate.rs  mod.rs  obfuscation.rs  packet.rs  routing.rs  search.rs  task.rs
rucio-net/: Cargo.toml  build.rs
rucio-net/src/: behaviour.rs  classify.rs  codec_utils.rs  have_codec.rs  lib.rs  messages.rs  outboard_codec.rs  pinset_codec.rs  task.rs  transfer_codec.rs
rucio-tauri/: .gitignore  Cargo.toml  tauri.conf.json
rucio-tauri/flatpak/: README.md  build.sh  me.ogarcia.rucio.desktop  me.ogarcia.rucio.metainfo.xml  me.ogarcia.rucio.yml
rucio-tauri/src/: main.rs
rucio-web/: Cargo.toml  index.html  manifest.webmanifest  sw.js
rucio-web/locales/: en.yml  es.yml
rucio-web/src/: api.rs  categories.rs  config.rs  downloads.rs  icons.rs  main.rs  notifications.rs  overlays.rs  pins.rs  platform.rs  searches.rs  shares.rs  statusbar.rs  subscriptions.rs  types.rs  uploads.rs  webhooks.rs
rucio/src/: main.rs
tests/e2e/: cleanup.sh  test-e2e.sh
website/: CNAME  index.html
website/es/: index.html
