[workspace]
members = [
    "rucio-core",
    "rucio-daemon",
    "rucio-cli",
    "rucio",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2024"
license     = "GPL-3.0-or-later"
authors     = []
repository  = "https://github.com/YOUR_USERNAME/rucio"

[workspace.dependencies]
# async
tokio       = { version = "1", features = ["full"] }

# serialización
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# hashing
blake3      = "1"

# p2p
libp2p      = { version = "0.56", features = [
    "tokio",
    "tcp",
    "quic",
    "noise",
    "yamux",
    "kad",
    "gossipsub",
    "mdns",
    "dcutr",
    "relay",
    "identify",
    "macros",
    "request-response",
] }

# http
axum        = { version = "0.8", features = ["macros"] }
utoipa      = { version = "5.5", features = ["axum_extras"] }

# db
sqlx        = { version = "0.9", features = ["runtime-tokio", "sqlite", "migrate", "macros"] }

# config
toml        = "1.1"

# cli
clap        = { version = "4", features = ["derive"] }

# http client (para rucio-cli)
reqwest     = { version = "0.13", features = ["json"] }

# error handling
thiserror   = "2"
anyhow      = "1"

# utils
hex         = "0.4"
uuid        = { version = "1", features = ["v4"] }
dirs        = "6"
tabled      = "0.20"
urlencoding = "2.1"

postcard    = { version = "1", features = ["alloc"] }
async-trait = "0.1"

# logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
