[workspace]
members = [
    "rucio-core",
    "rucio-net",
    "rucio-bootstrap",
    "rucio-daemon",
    "rucio-cli",
    "rucio",
    "rucio-emule",
    "rucio-web",
    "rucio-tauri",
]
# Excluded from the default host build:
#  - rucio-web compiles to wasm32 (built via trunk)
#  - rucio-tauri pulls Tauri/WebView2 and is built only by the Windows desktop job
default-members = [
    "rucio-core",
    "rucio-net",
    "rucio-bootstrap",
    "rucio-daemon",
    "rucio-cli",
    "rucio",
    "rucio-emule",
]
resolver = "2"

[workspace.package]
version     = "0.37.0-dev"
edition     = "2024"
license     = "GPL-3.0-or-later"
authors     = ["Óscar García Amor <ogarcia@connectical.com>"]
repository  = "https://github.com/ogarcia/rucio"
description = "Peer-to-peer file sharing over libp2p, with eMule/Kad2 compatibility"
readme      = "README.md"
keywords    = ["p2p", "file-sharing", "libp2p", "emule", "kademlia"]
categories  = ["network-programming", "command-line-utilities"]

[workspace.dependencies]
# async
tokio       = { version = "1", features = ["full"] }

# serialización
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# hashing
blake3      = "1"
# BLAKE3 verified streaming (Merkle tree outboard, range proofs)
bao-tree    = { version = "0.16", default-features = false, features = ["validate"] }

# compression
flate2      = { version = "1", default-features = false, features = ["zlib-rs"] }

# p2p
libp2p      = { version = "0.56", features = [
    "tokio",
    "tcp",
    "quic",
    "dns",
    "noise",
    "yamux",
    "kad",
    "gossipsub",
    "mdns",
    "dcutr",
    "relay",
    "identify",
    "autonat",
    "macros",
    "request-response",
] }

# http
axum           = { version = "0.8", features = ["macros", "ws"] }
utoipa         = { version = "5.5", features = ["axum_extras"] }
utoipa-scalar  = { version = "0.3", features = ["axum"] }

tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
futures-util      = "0.3"

# db
sqlx        = { version = "0.9", features = ["runtime-tokio", "sqlite", "migrate", "macros"] }

# config
toml        = "1.1"

# cli
clap        = { version = "4", features = ["derive", "env"] }

# http client (para rucio-cli)
reqwest     = { version = "0.13", features = ["json"] }

# error handling
thiserror   = "2"
anyhow      = "1"

# utils
hex         = "0.4"
base64      = "0.22"
js-sys      = "0.3"
uuid        = { version = "1", features = ["v4"] }
dirs        = "6"
tabled         = { version = "0.21", features = ["ansi"] }
terminal_size  = "0.4"
urlencoding    = "2.1"

postcard    = { version = "1", features = ["alloc"] }
async-trait = "0.1"

# logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

# filesystem watching
notify = { version = "8", features = ["macos_fsevent"] }

# mime detection
infer = "0.19"

owo-colors  = { version = "4.3", features = ["supports-colors"] }

# UPnP / IGD port mapping
igd-next    = { version = "0.17", features = ["aio_tokio"] }

# web UI embedding
rust-embed  = "8"

# i18n
rust-i18n   = "4.1"
sys-locale  = "0.3"

# test utilities
tempfile = "3"
