[package]
name        = "rucio-cli"
description = "Rucio command-line client"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[[bin]]
name = "rucio-cli"
path = "src/main.rs"

[dependencies]
rucio-core          = { path = "../rucio-core" }
tokio               = { workspace = true }
clap                = { workspace = true }
reqwest             = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
anyhow              = { workspace = true }
tracing             = { workspace = true }
tabled              = { workspace = true }
urlencoding         = { workspace = true }
tokio-tungstenite   = { workspace = true }
futures-util        = { workspace = true }
owo-colors          = { workspace = true }
