[package]
name        = "rucio-core"
description = "Core library for the Rucio P2P file sharing network"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
blake3      = { workspace = true }
libp2p      = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
hex         = { workspace = true }
uuid        = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
