[package]
name        = "rucio-core"
description = "Core library for the Rucio P2P file sharing network"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
blake3      = { workspace = true }
bao-tree    = { workspace = true }
postcard    = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
hex         = { workspace = true }
infer       = { workspace = true }
urlencoding = { workspace = true }
uuid        = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
utoipa      = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
serial_test = "3.4.0"
