[package]
name        = "rucio-daemon"
description = "Rucio P2P daemon — libp2p node and REST API"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[[bin]]
name = "ruciod"
path = "src/main.rs"

[features]
default = []
emule-compat = ["dep:rucio-emule", "dep:reqwest"]

[dependencies]
rucio-core          = { path = "../rucio-core" }
rucio-emule         = { path = "../rucio-emule", optional = true }
reqwest             = { version = "0.13", features = ["json"], optional = true }
tokio               = { workspace = true }
axum                = { workspace = true }
sqlx                = { workspace = true }
libp2p              = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
toml                = { workspace = true }
thiserror           = { workspace = true }
anyhow              = { workspace = true }
tracing             = { workspace = true }
utoipa              = { workspace = true }
utoipa-scalar       = { workspace = true }
hex         = { workspace = true }
uuid        = { workspace = true }
blake3      = { workspace = true }
postcard    = { workspace = true }
async-trait = { workspace = true }
urlencoding = { workspace = true }
dirs                = { workspace = true }
clap                = { workspace = true }
infer               = { workspace = true }
notify              = { workspace = true }
igd-next            = { workspace = true }

[dev-dependencies]
tower               = { version = "0.5", features = ["util"] }
http-body-util      = "0.1"
tempfile            = { workspace = true }
serial_test = "3.4.0"
