[package]
name        = "rucio-daemon"
description = "Rucio P2P daemon — libp2p node and REST API"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[[bin]]
name = "ruciod"
path = "src/main.rs"

[features]
default = []
emule-compat = ["dep:rucio-emule"]
web-ui       = ["dep:rust-embed"]

[dependencies]
rucio-core          = { path = "../rucio-core" }
rucio-net           = { path = "../rucio-net" }
rucio-emule         = { path = "../rucio-emule", optional = true }
# Used for the eMule nodes.dat download and for outbound notification webhooks,
# so it is non-optional (not gated behind emule-compat). Same TLS setup as
# before — left untouched to keep the static musl build working.
reqwest             = { version = "0.13", features = ["json"] }
hmac                = "0.13"
sha2                = "0.11"
rust-embed          = { workspace = true, optional = true }
tokio               = { workspace = true }
axum                = { workspace = true }
sqlx                = { workspace = true }
libp2p              = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
toml                = { workspace = true }
thiserror           = { workspace = true }
anyhow              = { workspace = true }
tracing             = { workspace = true }
utoipa              = { workspace = true }
utoipa-scalar       = { workspace = true }
hex         = { workspace = true }
base64      = { workspace = true }
uuid        = { workspace = true }
blake3      = { workspace = true }
md4         = "0.11"   # ed2k chunk hashes, computed alongside BLAKE3 on completion
postcard    = { workspace = true }
async-trait = { workspace = true }
urlencoding = { workspace = true }
dirs                = { workspace = true }
clap                = { workspace = true }
infer               = { workspace = true }
notify              = { workspace = true }
igd-next            = { workspace = true }

[dev-dependencies]
tower               = { version = "0.5", features = ["util"] }
http-body-util      = "0.1"
tempfile            = { workspace = true }
serial_test = "3.4.0"
# test-util enables the paused-clock test runtime (#[tokio::test(start_paused)]).
tokio               = { workspace = true, features = ["test-util"] }
