[package]
name        = "rucio-tauri"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
description = "Portable Rucio desktop app — a thin Tauri shell hosting the embedded daemon and its web UI"

# Excluded from the workspace `default-members`, so `cargo build`/`test`/`clippy`
# (and the Linux/container CI) never pull in Tauri/WebView2. Built only by the
# Windows desktop packaging job.

[build-dependencies]
tauri-build = "2"

[dependencies]
# The whole product, embedded: the daemon serves the Leptos UI + REST + WS on
# loopback, so the shell just spawns it and points a webview at it.
rucio-daemon = { path = "../rucio-daemon", features = ["emule-compat", "web-ui"] }
tauri        = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
# Persist and restore the window size / position / maximized state.
tauri-plugin-window-state = "2"
tokio        = { workspace = true }

# Linux has no system tray, so closing the window can't hide to one. Instead the
# app keeps running as a background app via the XDG Background portal, which
# lets the desktop (e.g. GNOME's "Background Apps" menu) list and manage it.
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13", default-features = false, features = ["tokio", "background"] }
# Read the desktop shell's own tiny, hand-edited desktop.toml (autostart).
dirs = { workspace = true }
toml = { workspace = true }
