[package]
name        = "rucio-web"
description = "Rucio web control panel (Leptos CSR, compiled to WASM by trunk)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[[bin]]
name = "rucio-web"
path = "src/main.rs"

[dependencies]
leptos        = { version = "0.8", features = ["csr"] }
gloo-net      = { version = "0.6", features = ["http", "websocket"] }
gloo-timers   = { version = "0.3", features = ["futures"] }
futures-util  = "0.3"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
web-sys       = { version = "0.3", features = ["Window", "Location"] }
