[package]
name        = "rucio"
description = "Rucio P2P file sharing — fat binary (daemon + cli)"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[[bin]]
name = "rucio"
path = "src/main.rs"

[dependencies]
rucio-daemon    = { path = "../rucio-daemon" }
rucio-cli       = { path = "../rucio-cli" }
tokio           = { workspace = true }
anyhow          = { workspace = true }
clap            = { workspace = true }
