[package]
name        = "rucio"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
description.workspace = true
readme.workspace      = true
keywords.workspace    = true
categories.workspace  = true

[[bin]]
name = "rucio"
path = "src/main.rs"

[features]
emule-compat = ["rucio-daemon/emule-compat"]
web-ui       = ["rucio-daemon/web-ui"]

[dependencies]
rucio-daemon    = { path = "../rucio-daemon" }
rucio-cli       = { path = "../rucio-cli" }
tokio           = { workspace = true }
anyhow          = { workspace = true }
clap            = { workspace = true }
